# file_compression_encryption

./: CMakeLists.txt  CMakePresets.json  readme.markdown  vcpkg.json
Core/: CMakeLists.txt  file_compression_encryption.cpp  file_compression_encryption.h  hufcrypt_core.cpp  hufcrypt_core.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
